[package]
name = "rora"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"
description = "Free and Open Source Bulletin Board Software"
readme = "README.md"
repository = "https://github.com/plabayo/rora"
authors = ["Glen De Cauwsemaecker <glen@plabayo.tech>"]
rust-version = "1.75.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
